<resources>
    <string name="app_name">LabsCM20231-Gr04</string>
    <string name="sexo">Sex:</string>
    <string name="infoPersonal">Personal Data</string>
    <string name="nombres">Names</string>
    <string name="requerido">Required*</string>
    <string name="apellidos">Last Name</string>
    <string name="hombre">Male</string>
    <string name="mujer">Female</string>
    <string name="fechaNacimiento">Birthdate:</string>
    <string name="seleccionaFecha">Select a date</string>
    <string name="siguiente">Next</string>
    <string name="telefono">Phone</string>
    <string name="correo">Mail</string>
    <string name="pais">Country</string>
    <string name="ciudad">City</string>
    <string name="direccion">Adress</string>
    <string name="toastMessageName">Name field is required</string>
    <string name="toastMessageLastName">Last name field is required</string>
    <string name="toastMessageDate">A birthdate is required</string>
    <string name="toastMessagePhone">Phone field is required</string>
    <string name="toastMessageMail">Mail field is required</string>
    <string name="toastMessageCountry">Country field is required</string>
    <string-array name="listaGrados">
        <item>School grade</item>
        <item>Elementary</item>
        <item>Highscool</item>
        <item>College</item>
        <item>Other</item>
    </string-array>

    <string-array name="listaPaises">
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Brasil</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Ecuador</item>
        <item>El Salvador</item>
        <item>Guayana Francesa</item>
        <item>Granada</item>
        <item>Guatemala</item>
        <item>Guayana</item>
        <item>Haití</item>
        <item>Honduras</item>
        <item>Jamaica</item>
        <item>México</item>
        <item>Nicaragua</item>
        <item>Paraguay</item>
        <item>Panamá</item>
        <item>Perú</item>
        <item>Puerto Rico</item>
        <item>República Dominicana</item>
        <item>Surinam</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
    </string-array>

    <string-array name="listaCiudades">
        <item>Bogotá</item>
        <item>Medellín</item>
        <item>Cali</item>
        <item>Barranquilla</item>
        <item>Cartagena</item>
        <item>Soledad</item>
        <item>Cúcuta</item>
        <item>Ibagué</item>
        <item>Soacha</item>
        <item>Villavicencio</item>
        <item>Bucaramanga</item>
        <item>Santa Marta</item>
        <item>Valledupar</item>
        <item>Bello</item>
        <item>Pereira</item>
        <item>Montería</item>
        <item>Pasto</item>
        <item>Buenaventura</item>
        <item>Manizales</item>
        <item>Neiva</item>
        <item>Palmira</item>
        <item>Riohacha</item>
        <item>Sincelejo</item>
        <item>Popayán</item>
        <item>Itagüí</item>
        <item>Floridablanca</item>
    </string-array>

</resources>